# CourseFlow

./: .coveragerc  .editorconfig  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .vite.env  =22.3  LICENSE  LICENSE.txt  LICENSE.txt.py  MANIFEST.in  README.md  config.js  course_flow.py  course_flow_creation_distribution.py  course_update.html  db.sqlite3  db_production.sqlite3  docker-compose.yml  gulpfile.js  jsconfig.json  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  rollup.cofig.redesign.js  rollup.config.js  rollup.config.jsBAK  rollup.config.redesign.js  setup.cfg  tsconfig.json  vite.config.dev.js  vite.config.dev.ts
.circleci/: config.yml
.github/workflows/: stale_bot.yml
course_flow/: __init__.py  admin.py  analytics.py  apps.py  asgi.py  celery.py  checks.py  consumers.py  context_processors.py  decorators.py  duplication_functions.py  export_functions.py  forms.py  import_functions.py  lti.py  models.py  models.pyNAK  redux_actions.py  routing.py  serializers.py  settings.py  tasks.py  test_urls.py  urls.py  utils.py  view_utils.py  views.py
course_flow/_ARCHIVE/: liveproject_receivers.py  serializers.OLD>py
course_flow/fixtures/: template_strategies.json
course_flow/management/commands/: clear_orphaned_objects.py  create_base_disciplines.py  create_instances.py  create_saltise_strategies.py
course_flow/middleware/: DynamicInternalIPSMiddleware.py
course_flow/migrations/: 0001_initial.py  0002_auto_20200219_2139.py  0003_auto_20200225_1906.py  0004_component_students.py  0005_auto_20200916_1732.py  0005_auto_20210322_0330.py  0005_column.py  0006_auto_20200910_2049.py  0006_auto_20200916_2314.py  0007_auto_20200916_2323.py  0008_auto_20200917_2034.py  0009_auto_20200917_2040.py  0010_auto_20200928_1734.py  0011_auto_20200930_1841.py  0012_auto_20200930_1845.py  0013_auto_20200930_2043.py  0014_auto_20201001_1817.py  0015_auto_20201002_2156.py  0016_auto_20201002_2158.py  0017_nodelink.py  0018_node_has_autolink.py  0019_auto_20201016_0012.py  0020_auto_20201029_2053.py  0021_auto_20201030_1739.py  0022_auto_20201102_2149.py  0023_auto_20201102_2227.py  0024_auto_20201103_1809.py  0025_column_visible.py  0026_auto_20201118_0055.py  0027_auto_20201118_1926.py  0028_auto_20210104_1845.py  0029_auto_20210104_1906.py  0030_auto_20210104_2052.py  0031_auto_20210105_1738.py  0032_outcome_is_dropped.py  0033_workflow_outcomes_type.py  0034_outcomenode_degree.py  0035_workflow_outcomes_sort.py  0036_auto_20210119_1813.py  0037_auto_20210119_1825.py  (+87 more)
course_flow/models/: __init__.py  _abstract.py  _constants.py  activity.py  column.py  comment.py  common.py  course.py  courseFlowUser.py  discipline.py  favourite.py  liveAssignment.py  liveProject.py  node.py  notification.py  objectPermission.py  objectset.py  outcome.py  program.py  project.py  updateNotification.py  user.py  userAssignment.py  week.py  workflow.py
course_flow/models/liveprojectmodels/: __init__.py  liveAssignment.py  liveProject.py  liveProjectUser.py  userAssignment.py
course_flow/models/receivers/: liveproject_receivers.py  receivers.py
course_flow/models/relations/: __init__.py  columnWorkflow.py  liveProjectUser.py  nodeLink.py  nodeWeek.py  outcomeHorizontalLink.py  outcomeNode.py  outcomeOutcome.py  outcomeWorkflow.py  weekWorkflow.py  workflowProject.py
course_flow/models/workflow_objects/: __init__.py  column.py  node.py  outcome.py  week.py
course_flow/models/workspace/: __init__.py  program.py  (+2 more)
course_flow/routes/: aggregated_urls.py  html_urls.py  json_api_urls.py  websocket_urls.py
course_flow/serializers/: __init__.py  _sort.py  admin.py  container.py  export.py  form.py  library.py  mixin.py  node.py  outcome.py  project.py  user.py  workflow.py  workflow_objects.py  workspace.py  workspace_user.py
course_flow/services/: __init__.py  config.py  dao.py  library.py  notifications.py  project.py  utils.py  workflow.py
course_flow/sockets/: celery.py  consumers.py  redux_actions.py
course_flow/templatetags/: course_flow_templatetags.py  render_vite_bundle.py
course_flow/tests/: conftest.py  fixtures.py  test_decorators.py  test_lti.py  test_models.py
course_flow/views/: __init__.py  create_api.py  delete_api.py  duplication_api.py  export_import_api.py  json_api.py  live_project_api.py  menu_api.py  mixins.py  old_courseflow_import_api.py  search_api.py  sharing_api.py  update_api.py  views.py  workflow_api.py
course_flow_creation_distribution/: admin.py  apps.py  decorators.py  forms.py  lti.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
course_flow_creation_distribution/migrations/: 0001_initial.py  0002_auto_20191016_2020.py  0003_week_hash.py  0004_auto_20191016_2104.py  0005_auto_20191017_1843.py  0006_auto_20191017_1850.py  0007_auto_20191018_1922.py  0008_auto_20191025_1844.py  0009_auto_20191031_1802.py  0010_auto_20191101_1857.py  0011_auto_20191101_1923.py  0012_auto_20191104_2154.py  0013_auto_20191104_2224.py  0014_auto_20191107_2104.py  0015_node_is_original.py  0016_auto_20191113_1839.py  0017_auto_20191125_1952.py  0018_auto_20191125_2149.py  0019_auto_20191128_2245.py  0020_auto_20200109_1847.py
course_flow_creation_distribution/tests/: conftest.py  fixtures.py  test_lti.py  test_models.py
course_flow_maker/: settings.py  urls.py  wsgi.py
course_flow_statistics/: apps.py  urls.py
docker/: .dockerignore  Dockerfile  DockerfilePrecommit  Dockerfile_64  docker-entrypoint.sh  other-scripts.sh  run-setupdata.sh  setup-data.sh  tests.sh
react/: .eslintrc.json  .vite.env  README.md  index.html  package-lock.json  package.json  temp.json  tsconfig.json  vite.config.dev.js  vite.config.devBAKUP.js  vite.config.js  vite.config.tsYO
react/src/: ConnectedUsers.jsx  ConnectedUsers.tsx  ConnectionBar.tsx  app-redesign.jsx  app-redesign.tsx  app.tsx  base.tsx  constants.js  constants.ts  wdyr.js  wdyr.ts
requirements/: requirements.in  requirements.txt  requirements.txt.py
scripts/: generate_erd.sh  get_latest_version_number.py  graph_models.md
(+1629 files in other folders)
