[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38-django3_2

[testenv]
setenv =
  PIP_INDEX_URL = https://pypi.python.org/simple
deps =
  daphne >= 4
  pytest-django
  redislite
  selenium
allowlist_externals = sh
#commands_pre = sh -c 'redis-server &'
#commands = python -X dev -m pytest {posargs} --ignore-glob=*functional*
#commands_post = redis-cli shutdown
"""

[tool.black]
line_length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
/)
'''

[tool.isort]
skip = ["./course_flow/models/__init__.py"]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
