[metadata]
name = SALTISE_course_flow
version = 0.8.18
description = CourseFlow
long_description = file: README.rst
url = https://www.example.com/
author = Arthur Ayestas Hilgert, Jeremie Choquette
author_email = aahilgert@gmail.com
license_files = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires=
    ~=3.8
install_requires=
    asgiref
    bleach
    celery[redis]
    channels >= 4
    channels_redis >= 4
    django >= 3, < 4
    django-compressor
    django-csp
    django-model-utils
    django-ratelimit < 4
    django-redis
    djangorestframework
    html2text
    openpyxl
    pandas >= 1.3.5
    xlrd
    xlsxwriter
